--- a/vignettes/RNAfriends.Rmd
+++ b/vignettes/RNAfriends.Rmd
@@ -41,6 +41,14 @@ RNAfriends::plot_aminoacids_abundance()
 
 ## codonize
 
+Splits a sequence of DNA or RNA into strings of codons.
+
+```{r}
+sequence = "ATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGAGACTTGACATCGAUGTAATCGAUGTTAATGACATTGACATCGAUGCGAUGTTAATGACATCGAUGTTAATGAGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTA"
+
+codonize(sequence, start = 1)
+```
+
 ## RNA_aminoacid_translation
 
 ## plot_aminoacics_abundance
