--- a/vignettes/RNAfriends.Rmd
+++ b/vignettes/RNAfriends.Rmd
@@ -46,7 +46,7 @@ Splits a sequence of DNA or RNA into strings of codons.
 ```{r}
 sequence = "ATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGAGACTTGACATCGAUGTAATCGAUGTTAATGACATTGACATCGAUGCGAUGTTAATGACATCGAUGTTAATGAGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTA"
 
-codonize(sequence, start = 1)
+RNAfriends::codonize(sequence, start = 1)
 ```
 
 ## RNA_aminoacid_translation
