--- a/vignettes/RNAfriends.Rmd
+++ b/vignettes/RNAfriends.Rmd
@@ -56,8 +56,13 @@ DNAsequence <-"CTAAAAAAGGGGGGTTTTTTTTTCCCCCCCCCGTCAGCTACGTATGATGAGTAGATGCATATTTT
 RNAfriends::function2(DNAsequence )
 ```
 
-
 ## codonize
+
+```{r}
+sequence = "ATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGAGACTTGACATCGAUGTAATCGAUGTTAATGACATTGACATCGAUGCGAUGTTAATGACATCGAUGTTAATGAGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTAATGACATCGAUGTTA"
+
+RNAfriends::codonize(sequence, start = 1)
+```
 
 ## RNA_aminoacid_translation
 
@@ -78,6 +83,5 @@ The function plots the aminoacids abundance for a given peptide-sequence.
 peptide_sequence = "QERRYQ"
 RNAfriends::plot_aminoacids_abundance(peptide_sequence)
 ```
-
 
 ## Combined example
