retry to add names

--- a/doc/RNAfriends.Rmd
+++ b/doc/RNAfriends.Rmd
@@ -20,6 +20,18 @@ library(RNAfriends)
 
 GitHub repository: <https://github.com/rforbiodatascience25/group_09_package.git> <https://github.com/rforbiodatascience25/group_09_package.git>
 
+Authors:
+
+-   Selina Friesen - s252027
+
+-   Marta Sánchez - s254791
+
+-   Sergi Fornós - s253693
+
+-   Tommaso Ballocci - tobal
+
+-   Ivan Musalyk - s225210
+
 ## Package description
 
 This package is based on the central dogma of molecular biology, which states that a DNA filament (sequence of nucleotides) is transcribed into RNA, which is finally translated into aminoacid sequences (that form proteins).
