fixed student number

--- a/doc/RNAfriends.Rmd
+++ b/doc/RNAfriends.Rmd
@@ -28,7 +28,7 @@ Authors:
 
 -   Sergi Fornós - s253693
 
--   Tommaso Ballocci - tobal
+-   Tommaso Ballocci - s257151
 
 -   Ivan Musalyk - s225210
 
